--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@types/react-modal": "^3.16.3",
+    "axios": "^1.7.7",
     "next": "14.2.8",
     "react": "^18",
     "react-datepicker": "^7.3.0",
