added login and signup for user

--- a/backend/.env.example
+++ b/backend/.env.example
@@ -1,1 +1,2 @@
 MONGODB_URI=mongodb+srv://behere2000:81718804@cluster0.9cjy24q.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0
+JWT_SECRET=yevruS!@#$%^&*()_+1234567890
