--- a/backend/package.json
+++ b/backend/package.json
@@ -14,10 +14,12 @@
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
+    "express-fileupload": "^1.5.1",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.6.1",
     "mongoose-unique-validator": "^5.0.1",
-    "nodemailer": "^6.9.15"
+    "nodemailer": "^6.9.15",
+    "path": "^0.12.7"
   },
   "devDependencies": {
     "nodemon": "^3.1.4"
