--- a/backend/.env.example
+++ b/backend/.env.example
@@ -1,3 +1,8 @@
 MONGODB_URI=mongodb+srv://behere2000:81718804@cluster0.9cjy24q.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0
+
 JWT_SECRET=yevruS!@#$%^&*()_+1234567890
-CLIENT_URL=http://localhost:6969 // please put root of website here
+CLIENT_URL=http://localhost:6969
+
+NODEMAILER_EMAIL=email
+NODEMAILER_EMAIL_PASSWORD=pass
+
