--- a/frontend/package.json
+++ b/frontend/package.json
@@ -19,6 +19,7 @@
     "react-hot-toast": "^2.4.1",
     "react-icons": "^5.3.0",
     "react-modal": "^3.16.1",
+    "react-spinners": "^0.14.1",
     "tailwind-merge": "^2.5.2"
   },
   "devDependencies": {
