--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,10 +9,16 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@amcharts/amcharts4": "^4.10.39",
+    "@amcharts/amcharts4-geodata": "^4.1.30",
+    "@types/chart.js": "^2.9.41",
+    "@types/react-chartjs-2": "^2.5.7",
     "@types/react-modal": "^3.16.3",
     "axios": "^1.7.7",
+    "chart.js": "^4.4.4",
     "next": "14.2.8",
     "react": "^18",
+    "react-chartjs-2": "^5.2.0",
     "react-datepicker": "^7.3.0",
     "react-dom": "^18",
     "react-hook-form": "^7.53.0",
@@ -26,7 +32,7 @@
   },
   "devDependencies": {
     "@types/node": "^20",
-    "@types/react": "^18",
+    "@types/react": "^18.3.6",
     "@types/react-dom": "^18",
     "postcss": "^8",
     "tailwindcss": "^3.4.1",
