--- a/frontend/package.json
+++ b/frontend/package.json
@@ -28,6 +28,7 @@
     "react-spinners": "^0.14.1",
     "react-switch": "^7.0.0",
     "react-tooltip": "^5.28.0",
+    "recharts": "^2.12.7",
     "tailwind-merge": "^2.5.2"
   },
   "devDependencies": {
