--- a/backend/package.json
+++ b/backend/package.json
@@ -19,7 +19,8 @@
     "mongoose": "^8.6.1",
     "mongoose-unique-validator": "^5.0.1",
     "nodemailer": "^6.9.15",
-    "path": "^0.12.7"
+    "path": "^0.12.7",
+    "socket.io": "^4.7.5"
   },
   "devDependencies": {
     "nodemon": "^3.1.4"
