--- a/frontend/package.json
+++ b/frontend/package.json
@@ -29,6 +29,7 @@
     "react-spinners": "^0.14.1",
     "react-switch": "^7.0.0",
     "react-tooltip": "^5.28.0",
+    "socket.io-client": "^4.7.5",
     "tailwind-merge": "^2.5.2"
   },
   "devDependencies": {
