--- a/frontend/package.json
+++ b/frontend/package.json
@@ -31,7 +31,8 @@
     "react-switch": "^7.0.0",
     "react-tooltip": "^5.28.0",
     "socket.io-client": "^4.7.5",
-    "tailwind-merge": "^2.5.2"
+    "tailwind-merge": "^2.5.2",
+    "xlsx": "^0.18.5"
   },
   "devDependencies": {
     "@types/node": "^20",
