--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@amcharts/amcharts4": "^4.10.39",
     "@amcharts/amcharts4-geodata": "^4.1.30",
+    "@react-google-maps/api": "^2.20.3",
     "@types/chart.js": "^2.9.41",
     "@types/react-chartjs-2": "^2.5.7",
     "@types/react-modal": "^3.16.3",
