--- a/frontend/package.json
+++ b/frontend/package.json
@@ -28,6 +28,7 @@
     "react-icons": "^5.3.0",
     "react-infinite-scroll-component": "^6.1.0",
     "react-modal": "^3.16.1",
+    "react-select": "^5.8.2",
     "react-spinners": "^0.14.1",
     "react-switch": "^7.0.0",
     "react-tooltip": "^5.28.0",
