--- a/frontend/package.json
+++ b/frontend/package.json
@@ -17,6 +17,7 @@
     "@types/react-modal": "^3.16.3",
     "axios": "^1.7.7",
     "chart.js": "^4.4.4",
+    "chartjs-plugin-datalabels": "^2.2.0",
     "d3": "^7.9.0",
     "next": "14.2.8",
     "react": "^18",
