user password reset

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,6 +11,11 @@
   "dependencies": {
     "@amcharts/amcharts4": "^4.10.39",
     "@amcharts/amcharts4-geodata": "^4.1.30",
+    "@date-io/date-fns": "^3.0.0",
+    "@emotion/react": "^11.14.0",
+    "@emotion/styled": "^11.14.0",
+    "@mui/material": "^6.1.10",
+    "@mui/x-date-pickers": "^7.23.1",
     "@react-google-maps/api": "^2.20.3",
     "@types/chart.js": "^2.9.41",
     "@types/react-chartjs-2": "^2.5.7",
@@ -19,7 +24,9 @@
     "chart.js": "^4.4.4",
     "chartjs-plugin-datalabels": "^2.2.0",
     "d3": "^7.9.0",
+    "date-fns": "^3.6.0",
     "date-fns-tz": "^3.2.0",
+    "dayjs": "^1.11.13",
     "flatpickr": "^4.6.13",
     "next": "14.2.8",
     "react": "^18",
