--- a/backend/package.json
+++ b/backend/package.json
@@ -27,7 +27,8 @@
     "nodemailer": "^6.9.15",
     "path": "^0.12.7",
     "puppeteer": "^23.11.1",
-    "socket.io": "^4.7.5"
+    "socket.io": "^4.7.5",
+    "xlsx": "^0.18.5"
   },
   "devDependencies": {
     "nodemon": "^3.1.4"
