--- a/backend/package.json
+++ b/backend/package.json
@@ -20,6 +20,7 @@
     "express-fileupload": "^1.5.1",
     "firebase-admin": "^13.0.1",
     "jsonwebtoken": "^9.0.2",
+    "moment": "^2.30.1",
     "mongoose": "^8.6.1",
     "mongoose-unique-validator": "^5.0.1",
     "morgan": "^1.10.0",
