--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,7 +14,8 @@
     "@date-io/date-fns": "^3.0.0",
     "@emotion/react": "^11.14.0",
     "@emotion/styled": "^11.14.0",
-    "@mui/material": "^6.1.10",
+    "@mui/icons-material": "^6.4.5",
+    "@mui/material": "^6.4.5",
     "@mui/x-date-pickers": "^7.23.1",
     "@react-google-maps/api": "^2.20.3",
     "@types/chart.js": "^2.9.41",
@@ -38,7 +39,7 @@
     "react-flatpickr": "^3.10.13",
     "react-hook-form": "^7.53.0",
     "react-hot-toast": "^2.4.1",
-    "react-icons": "^5.3.0",
+    "react-icons": "^5.5.0",
     "react-infinite-scroll-component": "^6.1.0",
     "react-modal": "^3.16.1",
     "react-select": "^5.8.2",
