--- a/frontend/package.json
+++ b/frontend/package.json
@@ -32,6 +32,7 @@
     "html2canvas": "^1.4.1",
     "jspdf": "^2.5.2",
     "next": "14.2.8",
+    "node": "^18.20.7",
     "react": "^18",
     "react-chartjs-2": "^5.2.0",
     "react-datepicker": "^7.3.0",
